<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c4762"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding" >

    <!--
         <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Information will be displayed."/>
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/img_view_pic"
                        android:layout_width="@dimen/img_view_width"
                        android:layout_height="@dimen/img_view_height"
                        android:src="@drawable/profile_picture" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_view_complete_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_view_name" />

                    <TextView
                        android:id="@+id/txt_view_phonetic_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_view_phonetic_name" />

                    <TextView
                        android:id="@+id/txt_view_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_view_nickname" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>