<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding" >

            <LinearLayout
                android:id="@+id/layout_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_vertical_margin"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/img_view_pic"
                        android:layout_width="@dimen/img_view_width"
                        android:layout_height="@dimen/img_view_height"
                        android:layout_margin="@dimen/image_margin"
                        android:src="@drawable/profile_picture" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/edit_txt_name_prefix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_txt_name_prefix_hint"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edit_txt_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_txt_first_name_hint"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edit_txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_txt_name_hint" />

                        <EditText
                            android:id="@+id/edit_txt_middle_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_txt_middle_name"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edit_txt_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_txt_last_name"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edit_txt_name_suffix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_txt_name_suffix_hint"
                            android:visibility="gone" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_view_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:src="@drawable/ic_action_expand" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_input_field_triple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <!--
                    <LinearLayout
                        android:id="@+id/layout_phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_vertical_margin"
                        android:layout_marginTop="@dimen/layout_vertical_margin"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="6"
                                android:text="@string/txt_view_phone"
                                android:textSize="@dimen/txt_size_heading"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/img_view_phone_add"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="@dimen/button_margin"
                                android:layout_weight="1"
                                android:src="@drawable/add_input_field" />
                        </LinearLayout>

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/line_height"
                            android:layout_marginBottom="@dimen/line_margin"
                            android:layout_marginTop="@dimen/line_margin"
                            android:background="#c0c0c0" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_vertical_margin"
                        android:layout_marginTop="@dimen/layout_vertical_margin"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="6"
                                android:text="@string/txt_view_email"
                                android:textSize="@dimen/txt_size_heading"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/img_view_email_add"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="@dimen/button_margin"
                                android:layout_weight="1"
                                android:src="@drawable/add_input_field" />
                        </LinearLayout>

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/line_height"
                            android:layout_marginBottom="@dimen/line_margin"
                            android:layout_marginTop="@dimen/line_margin"
                            android:background="#c0c0c0" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_address_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_vertical_margin"
                        android:layout_marginTop="@dimen/layout_vertical_margin"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="6"
                                android:text="@string/txt_view_address"
                                android:textSize="@dimen/txt_size_heading"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/img_view_address_add"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="@dimen/button_margin"
                                android:layout_weight="1"
                                android:src="@drawable/add_input_field" />
                        </LinearLayout>

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/line_height"
                            android:layout_marginBottom="@dimen/line_margin"
                            android:layout_marginTop="@dimen/line_margin"
                            android:background="#c0c0c0" />
                    </LinearLayout>
                    -->
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_add_more_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/button_padding"
                android:text="@string/button_add_more_fields" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>